--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       <div class="circle"></div>
       
       <div class="form-inner">
+        <form >
+
         <h1>FICHA DE CONTROLE</h1>
         <h3>Este formulário tem por objetivo monitorar as condições dos flexíveis identificando </br>precocemente problemas reversíveis.</h3>
        <!-- Primera pregunta -->
         <label>NOME DO INSTRUMENTADOR:</label>
-         <select>
+         <select required>
           <option selected>Selecione uma opção
           </option>
           <option value="1">Adriano Batalha</option>
@@ -368,7 +370,7 @@
                 $('#datetimepicker1').datetimepicker();
             });
         </script>
-    </div>
+      </div>
 <br>
 
 
@@ -609,7 +611,7 @@
                       <div class="form-inner">
                       <button type="submit" href="/">Enviar</button>
                       <button id ="btnBorrar">Borrar</button> 
-                      </div>
+                      </div></form>
 
    <!--     <input type="text" placeholder="Nombre y apellido">
         <input type="text" placeholder="Correo electronico">
