--- a/index3.html
+++ b/index3.html
@@ -630,7 +630,7 @@
         </label>
        </div>
        <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioEstadoGeralDefault" id="flexRadioDefault1" value="APROVADO COM RESSALVA">
+        <input class="form-check-input" type="radio" name="EstadoGeral" id="flexRadioDefault1" value="APROVADO COM RESSALVA">
         <label class="form-check-label" for="flexRadioDefault1">
             APROVADO COM RESSALVA
         </label>
