--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row mb-3">
            <label for="nomedoinstrumentador" class="col-sm-2 control-label" >NOME DO INSTRUMENTADOR:</label>
           <div class="col-sm-10">
-            <select class="custom-select" class="form-control" id="nomedoinstrumentador" name="nomedoinstrumentador" required="required">
+            <select class="custom-select" class="form-control" id="nomedoinstrumentador" name="nomedoinstrumentador" >
                 <option value="">Selecione uma opção</option>
                 <option value="Adriano Batalha">Adriano Batalha</option>
                 <option value="Ana Carolina Pedrozo">Ana Carolina Pedrozo</option>
@@ -67,7 +67,7 @@
         <div class="row mb-3">
          <label for="hospital" class="col-sm-2 control-label" >HOSPITAL:</label>
          <div class="col-sm-10">
-         <select class="custom-select" class="form-control" id="hospital" name="hospital" required="required">
+         <select class="custom-select" class="form-control" id="hospital" name="hospital" >
      <option selected>Selecione uma opção</option>
       <option value="Albert Sabin">   Albert Sabin</option>
       <option value="Alvorada Jacareí (Jacareí)">   Alvorada Jacareí (Jacareí)</option>í
@@ -137,7 +137,7 @@
         <div class="row mb-3">
             <label for="hospital" class="col-sm-2 control-label" >MEDICO:</label>
             <div class="col-sm-10">       
-           <select class="custom-select" class="form-control" id="medico"  name="medico" required="required">
+           <select class="custom-select" class="form-control" id="medico"  name="medico" >
             <option selected>Selecione uma opção
             </option>
     
@@ -390,7 +390,7 @@
         <div class="row mb-3">
             <label for="DOEQUIPAMENTO" class="col-sm-2 control-label" >DADOS DE IDENTIFICAÇÃO DO EQUIPAMENTO:</label>
             <div class="col-sm-10">       
-        <select class="custom-select" class="form-control" id="DOEQUIPAMENTO" name="DOEQUIPAMENTO" required="required">
+        <select class="custom-select" class="form-control" id="DOEQUIPAMENTO" name="DOEQUIPAMENTO" >
             <option value="" selected>Selecione uma opção
             </option>
         <option value="2128812">    2128812</option>
@@ -661,15 +661,31 @@
 
         <button type="submit" class="btn btn-primary" >Enviar</button>
       </form>
+      <div ><p id="resultado"></p></div>
     </div>
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="./sw.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+  <script type="text/javascript" src="./comportamientoNetwork.js"></script>
+
   <script src="./script3.js"></script>
+
+ <script>
+   window.addEventListener('load', () => {
+                console.log('Initially ' + (window.navigator.onLine ? 'on' : 'off') + 'line');
+              if(window.navigator.onLine){  
+                cargaIndexToFirestore()
+              }})
+window.addEventListener('online', () => { 
+        console.log('Became online')
+            });
+
+ </script>
 
 </html>
 
