--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
            </label>
          </div>
          <div class="form-check">
-           <input class="form-check-input" type="checkbox" id="OBSERVAÇÕES-Problemas no canal de trabalhoe" name="OBSERVAÇÕES"  value="Problemas no canal de trabalhoe">
+           <input class="form-check-input" type="checkbox" id="OBSERVAÇÕES-Problemas no canal de trabalho" name="OBSERVAÇÕES"  value="Problemas no canal de trabalho">
            <label class="form-check-label" for="gridCheck1">
                Problemas no canal de trabalho
            </label>
@@ -544,6 +544,36 @@
      </div>
    </div> 
  
+   
+
+    <!--BORRACHA DA PONTA:-->
+    <div class="row mb-3">
+      <label for="OBSERVACIONES" class="col-sm-2 control-label" >BORRACHA DA PONTA:</label>
+       <div class="col-sm-10">
+         <div class="form-check">
+          <input class="form-check-input" type="radio" name="BorrachaDaPonta" id="flexRadioDefault1" value="APROVADO">
+          <label class="form-check-label" for="flexRadioDefault1">
+              APROVADO      
+          </label>
+         </div>
+         <div class="form-check">
+          <input class="form-check-input" type="radio" name="BorrachaDaPonta" id="flexRadioDefault1" value="APROVADO COM RESSALVA">
+          <label class="form-check-label" for="flexRadioDefault1">
+              APROVADO COM RESSALVA
+          </label>
+           </div>
+           <div class="form-check">
+          <input class="form-check-input" type="radio" name="BorrachaDaPonta" id="flexRadioDefault1" value="NÃO APROVADO">
+          <label class="form-check-label" for="flexRadioDefault1">
+              NÃO APROVADO
+          </label>
+              </div>
+                 
+       </div>
+     </div> 
+
+
+
    <!--DEFLEXÃO/ANGULOS/PONTA FLEXÍVEL/FOLGA :-->
    <div class="row mb-3">
     <label for="OBSERVACIONES" class="col-sm-2 control-label"  >DEFLEXÃO/ANGULOS<br>/PONTA FLEXÍVEL/FOLGA:</label>
@@ -597,6 +627,37 @@
      </div>
    </div> 
  
+   
+   <!--SUPERFICÍE DA OBJETIVA:-->
+   <div class="row mb-3">
+    <label for="OBSERVACIONES" class="col-sm-2 control-label" >SUPERFICÍE DA OBJETIVA:</label>
+     <div class="col-sm-10">
+       <div class="form-check">
+        <input class="form-check-input" type="radio" name="SuperficieDaObjetiva" id="flexRadioDefault1" value="APROVADO" >
+        <label class="form-check-label" for="flexRadioDefault1">
+            APROVADO       
+        </label>
+       </div>
+       <div class="form-check">
+        <input class="form-check-input" type="radio" name="SuperficieDaObjetiva" id="flexRadioDefault1" value="APROVADO COM RESSALVA" >
+        <label class="form-check-label" for="flexRadioDefault1">
+            APROVADO COM RESSALVA
+        </label>
+         </div>
+         <div class="form-check">
+            <input class="form-check-input" type="radio" name="SuperficieDaObjetiva" id="flexRadioDefault1" value="NÃO APROVADO"> 
+            <label class="form-check-label" for="flexRadioDefault1">
+                NÃO APROVADO
+            </label>
+             </div>
+               
+     </div>
+   </div> 
+
+
+
+
+
    <!--IMAGEM:-->
    <div class="row mb-3">
     <label for="OBSERVACIONES" class="col-sm-2 control-label" >IMAGEM:</label>
