--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script type="text/javascript" src="/bower_components/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
-    <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+   
     <title>FICHA DE CONTROLE</title>
   </head>
   <body>
@@ -22,6 +17,7 @@
         <div class="row">    
         <h3>FICHA DE CONTROLE</h1>
         <h3>Este formulário tem por objetivo monitorar as condições dos flexíveis identificando </br>precocemente problemas reversíveis.</h3><br>
+        <p id="networkPrint"></p>
         </div>
      <form>
       
@@ -740,23 +736,21 @@
    window.addEventListener('load', () => {
                 console.log('Initially ' + (window.navigator.onLine ? 'on' : 'off') + 'line');
               if(window.navigator.onLine){  
+                document.querySelector('#networkPrint').innerText = `Você tem uma conexão de internet`;
+
                 cargaIndexToFirestore()
               }})
-window.addEventListener('online', () => { 
-        console.log('Became online')
-            });
+
+   window.addEventListener('online', () => {
+       document.querySelector('#networkPrint').innerText = `Você tem uma conexão de internet`;
+
+});
+
+window.addEventListener('offline', () => {
+  document.querySelector('#networkPrint').innerText = `Você não tem uma conexão com a Internet. Ao enviar o formulário, as informações serão armazenadas e enviadas na próxima vez que você fizer login online.`
+;
+});
 
  </script>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
