Quite required a checkboxs

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     <label for="OBSERVACIONES" class="col-sm-2 control-label" >OBSERVAÇÕES</label>
      <div class="col-sm-10">
        <div class="form-check">
-         <input required class="form-check-input" type="checkbox" id="OBSERVAÇÕES-Equipamento em bom estado" name="OBSERVAÇÕES" value="Equipamento em bom estado">
+         <input class="form-check-input" type="checkbox" id="OBSERVAÇÕES-Equipamento em bom estado" name="OBSERVAÇÕES" value="Equipamento em bom estado">
          <label class="form-check-label"     for="OBSERVAÇÕES-Equipamento em bom estado">
            Equipamento em bom estado 
          </label>
